[tool.poetry]
name = "simple_style_transfer"
version = "0.1.0"
description = "Apply styles from a series of images to a source video"
authors = ["Rémi Pouchain", "Evan Jones"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.2"
pillow = "^7.0"
tensorflow = "^2.1"
tensorflow-hub = "^0.7.0"
tensorflow-estimator = "^2.1"
moviepy = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
